# swagger/swagger.yaml
@@ -146,7 +146,7 @@ paths:
                 type: "string"
                 description: "The message associated to the error code"
   
-  /users:    
+  /users/signup:    
     x-swagger-router-controller: users
     post:
       tags:
@@ -174,6 +174,62 @@ paths:
                 $ref: "#/definitions/UserNew"
               message:
                 type: "string"
+        400:
+          description: "Invalid Input"
+          schema:
+            type: "object"
+            properties:
+              status:
+                type: "integer"
+                description: "The http status code"
+              code:
+                type: "integer"
+                description: "The error code"
+              message:
+                type: "string"
+                description: "The message associated to the error code"
+  /users/login:    
+    x-swagger-router-controller: users
+    post:
+      tags:
+      - "Users"
+      summary: "login as a user"
+      operationId: login
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "User object that needs to be login"
+        required: true
+        schema:
+          $ref: "#/definitions/UserLogin"
+      responses:
+        201:
+          description: "Successfully logged in User"
+          schema:
+            type: "object"
+            properties:
+              data:
+                $ref: "#/definitions/UserLoggedIn"
+              message:
+                type: "string"
+        404:
+          description: "User not exist"
+          schema:
+            type: "object"
+            properties:
+              status:
+                type: "integer"
+                description: "The http status code"
+              code:
+                type: "integer"
+                description: "The error code"
+              message:
+                type: "string"
+                description: "The message associated to the error code"
         400:
           description: "Invalid Input"
           schema:
@@ -409,7 +465,26 @@ definitions:
       password:
         type: "string"
         description: "The password of the user"
-  
+  UserLogin:
+    type: "object"
+    description: "The model of a user object to login a user"
+    required:
+      - "userName"
+      - "password"
+    properties:
+      userName:
+        type: "string"
+        description: "The username of the user. It will be used for login purpose"
+      password:
+        type: "string"
+        description: "The password of the user"
+  UserLoggedIn:
+    type: "object"
+    description: "The model of a logged in user as return by api"
+    properties:
+      apiKey:
+        type: "string"
+        description: "The key return by the api that will be used for further communication"
   UserNew:
     type: "object"
     description: "The model for a new user as returned by the API"
